--- a/gtst.html
+++ b/gtst.html
@@ -3,158 +3,60 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+ 	<link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet"/> 
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 	 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
 	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 	<style>
-
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-body {
-    line-height:1;
-}
-
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section { 
-    display:block;
-}
-
-nav ul {
-    list-style:none;
-}
-
-blockquote, q {
-    quotes:none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
-}
-
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-/* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-
-/* change colours to suit your needs */
-mark {
-    background-color:#ff9;
-    color:#000; 
-    font-style:italic;
-    font-weight:bold;
-}
-
-del {
-    text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
-}
-
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-
-/* change border colour to suit your needs */
-hr {
-    display:block;
-    height:1px;
-    border:0;   
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-
-input, select {
-    vertical-align:middle;
-}
-
 		*{
 			box-sizing: border-box;
+			font-family: 'Kalam', cursive;
 		}
 		html,body{
 			margin:0; padding:0;
 			background: #345;
-			font-size: 14pt;
 		}
 		.swiper-container {
 			width: 100%;
-			height: 100vh;
-			box-shadow: inset #f00 2px 2px, inset #f00 -2px -2px;
-		}
-		#footer{
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-			justify-content: center;
-			width: 100%;
-			height: 8vh;
-			background: #f00
+			height: 92vh;/*
+			box-shadow: inset #f00 2px 2px, inset #f00 -2px -2px;*/
 		}
 		.swiper-slide{
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: center;
-			background: #345;
-			color: #ddd;
+			justify-content: space-between;
+			background: transparent;
+			color: #fff;
+			padding-bottom: 0.5em;
 		}
-		#opRow, #contRow, #quesRow{
+		#opRow, #contRow, #quesRow, #resRow{
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			justify-content: stretch;
+			justify-content: flex-start;
 			width: 100%;
 		}
 		#opRow > button, #contRow > button {
 			flex-grow: 1;
-			width: auto;
-			margin: 1em 0.5em 0 0.5em;
-			font-size: 2em;
+			margin: 0 0.1em 0.5em 0.1em;
 			padding: 0.2em;
-			background: #7bb;
+			background: mediumpurple;
 			border: #0004 solid 5px;
 			border-radius: 0.5em;
 			box-shadow: #0004 0px 0px 20px;
+			font-size: 2em;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 100%;
 		}
 		#opRow > button:hover, #contRow > button:hover {
-			background: #8cc;
+			background: purple;
 			color: #000;
 			border: #0004 solid 5px;
 			border-radius: 0.5em;
@@ -163,45 +65,100 @@ input, select {
 
 		#quesRow > div{
 			flex-grow: 1;
-			width: auto;
-			height: 50vh;
+			width: 25%;
+			height: 25vh;
 			color: #fff;
-			font-size: 3.5em;
+			font-size: 4em;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
 		}
+		#qc{
+			width: 50%;
+		}
+		#qc > img{
+			height: 100%;
+			width: auto;
+		}
+		#resRow{
+			font-size: 2em;
+			flex-direction: column;
+			height: 25vh;
+		}
+		#nav{
+			position: fixed;
+			bottom: 0;
+			left: 0;
+			background: #222;
+			color: aqua;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			justify-content: flex-start;
+			height: 8vh;
+			width: 100%;
+			box-shadow: inset #0004 0 2px;
+		}
+		#watermark{
+			background-image: url('UKG20LogoFC.png');
+			background-repeat: no-repeat;
+			background-position: 50% 50%;
+			background-size: 80%;
+			background-origin: 50% 50%;
+			z-index: 5;
+			height: 50%;
+			width: 100vw;
+			position: fixed;
+			top: 0; left: 0;
+			opacity: 0.08;
+		}
+		.swiper-container{
+			z-index: 15;
+		}
 	</style>
 </head>
 <body>
+	<div id="watermark">
+	</div>
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
+			<div class="swiper-slide" style="justify-content: center; font-size: 3em; color: #000; text-align: center;">
+				<div class="date" style="font-size: 0.5em">09/08/2020</div>
+				<div class="subject" style="font-size: 1.2em">Maths</div>
+				<div class="topic" style="font-size: 0.6em">More-than, Less-than, Equal-to</div>
+			</div>
 			<div class="swiper-slide">
+				<div id="resRow">Let's Compare!</div>
 				<div id="quesRow">
 					<div id="ql"></div>
-					<div id="qc"></div>
+					<div id="qc">
+						<img src="null.png" alt="Aligator Pic"/>
+					</div>
 					<div id="qr"></div>
 				</div>
 				<div id="opRow">
-					<button id="less"><</button>
-					<button id="equal">=</button>
-					<button id="great">></button>
+					<button class="btn btn-primary" id="great"><i class="fas fa-greater-than"></i></button>
+					<button class="btn btn-primary" id="equal"><i class="fas fa-equals"></i></button>
+					<button class="btn btn-primary" id="less"><i class="fas fa-less-than"></i></button>
 				</div>
 
 				<div id="contRow">
-					<button id="new1"><=</button>
-					<button id="check">Check</button>
-					<button id="new2">=></button>
+					<button id="check"><i class="fas fa-paper-plane"></i> Check</button>
+					<button class="new" id="new2"><i class="fas fa-arrow-right"></i></button>
 				</div>
 			</div>
-			<div class="swiper-slide">Slide 1</div>
 			<div class="swiper-slide">Slide 3</div>
 		</div>
+	</div>
+	<div id="nav">
+		&nbsp;&nbsp;PushpaUKG > Maths > NumberComparison
 	</div>
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
+
 	<script>
 		var mySwiper = new Swiper('.swiper-container', {
 		  // Optional parameters
@@ -228,14 +185,77 @@ input, select {
 	</script>
 	<script>
 		$(function(){
-			console.log("init success!!");
+			let ans = "";
+			let opID = "";
+			let ql = 0;
+			let qr = 0;
+			let t = 0;
+			let tPrev = 0;
+			let chance = 6;
+
 			function newQues(){
-				let ql = Math.trunc(Math.random()*20);
-				let qr = Math.trunc(Math.random()*20);
-				$("#ql").html(ql);
-				$("#qr").html(qr);
+				t = Math.trunc(Math.random()*chance);
+				if(t!=tPrev){
+					if(t<(chance-1)){
+						ql = Math.trunc(Math.random()*20);
+						qr = Math.trunc(Math.random()*20);
+						if(ql<qr){
+							ans = "less";
+						}
+						else if(ql>qr){
+							ans = "great";
+						}
+						else{
+							ans = "equal";
+						}
+					}
+					if(t==(chance-1)){
+						ql = Math.trunc(Math.random()*20);
+						qr = ql;
+						ans = "equal";
+					}
+
+					$("#ql").html(ql);
+					$("#qr").html(qr);
+					$("#qc").html("<img src='null.png' alt='Aligator Pic'/>");
+					$("body").css("background","#7bb");
+					$("#resRow").html("Let's Compare!");	
+					tPrev = t;
+				}
+				else{
+					newQues();
+				}
 			}
+
+			$("#opRow > button").click(function() {
+				opID = $(this).attr("id");
+				console.log(opID);
+				$("#qc").html("<img src='"+opID+".png' alt='Aligator Pic Less'/>");
+
+			});
+
+			console.log("init success!!");
 			newQues();
+			
+			$("#new2").click(function(){
+				newQues();
+			});
+			$("#new1").click(function(){
+				newQues2();
+			});
+
+			$("#check").click(function(){
+				if(ans == opID){
+					$("body").css("background", "seagreen");
+					$("#resRow").html("Correct!!<br/><img height='100%' width='auto' src='laugh.gif'/>");
+					console.log("correct");
+				}
+				else{
+					$("body").css("background","firebrick");
+					$("#resRow").html("Wrong!!<br/><img height='100%' width='auto' src='cry.gif'/>");
+					console.log("wrong");
+				}
+			})
 		});
 	</script>
 </body>
