--- a/gtst.html
+++ b/gtst.html
@@ -152,7 +152,7 @@
 		</div>
 	</div>
 	<div id="nav">
-		&nbsp;&nbsp;PushpaUKG > Maths > NumberComparison
+		&nbsp;&nbsp;PushpaUKG >&nbsp;<span id="fs">Maths</span>&nbsp;> NumberComparison
 	</div>
 
 
@@ -160,6 +160,38 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
 
 	<script>
+
+		function toggleFullscreen(elem) {
+		  elem = elem || document.documentElement;
+
+		  if (!document.fullscreenElement && !document.mozFullScreenElement &&
+		    !document.webkitFullscreenElement && !document.msFullscreenElement) {
+		    if (elem.requestFullscreen) {
+		      elem.requestFullscreen();
+		    } else if (elem.msRequestFullscreen) {
+		      elem.msRequestFullscreen();
+		    } else if (elem.mozRequestFullScreen) {
+		      elem.mozRequestFullScreen();
+		    } else if (elem.webkitRequestFullscreen) {
+		      elem.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
+		    }
+		  } else {
+		    if (document.exitFullscreen) {
+		      document.exitFullscreen();
+		    } else if (document.msExitFullscreen) {
+		      document.msExitFullscreen();
+		    } else if (document.mozCancelFullScreen) {
+		      document.mozCancelFullScreen();
+		    } else if (document.webkitExitFullscreen) {
+		      document.webkitExitFullscreen();
+		    }
+		  }
+		}
+
+		document.getElementById('fs').addEventListener('click', function() {
+		  toggleFullscreen();
+		});
+
 		var mySwiper = new Swiper('.swiper-container', {
 		  // Optional parameters
 		  direction: 'horizontal',
