--- a/gtst.html
+++ b/gtst.html
@@ -194,6 +194,7 @@
 
 		document.getElementById('Fulls').addEventListener('click', function() {
 		  toggleFullscreen();
+		  document.getElementById('Fulls').innerHTML("HELLO");
 		});
 
 		var mySwiper = new Swiper('.swiper-container', {
