--- a/gtst.html
+++ b/gtst.html
@@ -124,9 +124,11 @@
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide" style="justify-content: center; font-size: 3em; color: #000; text-align: center;">
-				<div class="date" style="font-size: 0.5em">09/08/2020</div>
-				<div class="subject" id="Fulls" style="font-size: 1.2em">Maths</div>
-				<div class="topic" style="font-size: 0.6em">More-than, Less-than, Equal-to</div>
+				<div class="date" style="font-size: 0.5em">10/08/2020</div>
+				<div class="subject" id="Fulls" style="font-size: 2em">Maths</div>
+				<div class="topic" style="font-size: 0.8em">More than ><br/>
+				Less than <<br/>
+				Equal to =</div>
 			</div>
 			<div class="swiper-slide">
 				<div id="resRow">Let's Compare!</div>
@@ -148,7 +150,10 @@
 					<button class="new" id="new2"><i class="fas fa-arrow-right"></i></button>
 				</div>
 			</div>
-			<div class="swiper-slide">Slide 3</div>
+			<div class="swiper-slide" style="justify-content: center; font-size: 3em; color: #000">
+				Thank You!! <br/>
+				<i class="fas fa-smile" style="font-size: 3em; color: yellow"></i>
+			</div>
 		</div>
 	</div>
 	<div id="nav">
